--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".CustomApplication"
@@ -23,7 +24,7 @@
         <activity android:name=".MainActivity"
             android:taskAffinity=""
             android:excludeFromRecents="true"
-            android:launchMode="singleTask">
+            android:configChanges="keyboardHidden|locale|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
